[package]
name = "kadent_engine"
version = "0.3.20"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "kadent_engine"
path = "src/lib.rs"

[dependencies]
cpal = "0.17.3"
midir = "0.11.0"
rayon = "1.12.0"
ringbuf = "0.4.8"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
